--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </head>
+
 <body>
-    <h1>fjaskdfjsk</h1>
+    <section id="particles-js" class="home">
+        <nav class="navBar">
+            <!-- <div> -->
+                <div style="background-color: #080d19;">
+                    <img src="./images/logo.png" alt="logo">
+                </div>
+                <div id="toggleBar">
+                    <ion-icon name="menu" style="font-size: 2rem;"></ion-icon>
+                </div>
+                <ul id='menuList' class="menuList">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#services">FAQ</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+        </nav>
+        <div class="main">
+            <h1 class="hero_heading">Full-Stack Web & App Development for Scalable Businesses</h1>
+            <p class="hero_sub_heading">"From concept to deployment—I deliver fast, secure, and user-friendly digital
+                solutions."</p>
+            <p class="hero_para">As a passionate <span class="activeText">web developer</span> , I am dedicated to
+                crafting exceptional web solutions
+                that meet your <span class="activeText">Business</span>, whether you require a simple website or a <span
+                    class="activeText">complex web application</span>. With a
+                focus on user <span class="activeText">experience</span>,<span class="activeText">accessibility</span>,
+                and <span class="activeText">scalability</span>, I deliver high-quality results that exceed
+                your expectations.</p>
+         
+            <div
+                style="display: flex;align-items: center;gap: 20px; position: relative; z-index: 10;margin: 30px 0px 100px 0px ;">
+                <button class="btn btn-outline" >See My Work</button>
+                <button class="btn btn-fill" ><a href="#contact">Contact
+                        us</a></button>
+            </div>
+        </div>
+        <script src="./js/particles.js"></script>
+        <script src="./js/app.js"></script>
+    </section>
+
+
+    <!-- <script type="module" src="./js/main.js"></script> -->
 </body>
+
 </html>
