--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div> -->
             <div
                 style="display: flex;align-items: center;gap: 20px; position: relative; z-index: 10;margin: 30px 0px 100px 0px ;">
-                <button class="loginBtn" style="color: var(--pink);cursor: pointer;">See My Work</button>
+                <!-- <button class="loginBtn" style="color: var(--pink);cursor: pointer;">See My Work</button> -->
                 <button class="loginBtn" style="cursor: pointer;"><a href="#contact" style="color: var(--pink);">Contact us</a></button>
             </div>
         </div>
